--- a/mailTemplate.html
+++ b/mailTemplate.html
@@ -243,7 +243,7 @@
 														<!-- Logo and Link // -->
 														<img src="https://agarwalinnosoft.com/pwvlogo.png"
 															style="width: 100%;max-width:450px ;height: auto;display: block;"
-															border="0" alt="">
+															border="0" alt="" />
 
 
 
@@ -286,7 +286,7 @@
 														<img src="http://grapestheme.com/notify/img/hero-img/red/heroFill/user-welcome.png"
 															width="600" border="0"
 															style="width: 100%; max-width: 600px; height: auto; display: block;"
-															alt="">
+															alt="" />
 
 													</td>
 												</tr>
@@ -698,7 +698,7 @@
 
 																		<img src="https://agarwalinnosoft.com/yogeshagarwal3.jpg"
 																			alt="" width="580" border="0"
-																			style="width:100%; max-width:580px;height:auto; display:block;">
+																			style="width:100%; max-width:580px;height:auto; display:block;" />
 
 																	</td>
 																</tr>
@@ -741,7 +741,7 @@
 															class="facebook">
 															<img src="http://grapestheme.com/notify/img/social/light/facebook.png"
 																alt="" width="40" border="0"
-																style="height:auto; width:100%; max-width:40px; margin-left:2px; margin-right:2px">
+																style="height:auto; width:100%; max-width:40px; margin-left:2px; margin-right:2px" />
 														</a>
 														<!-- Social Links (Twitter)// -->
 														<a href="https://www.youtube.com/channel/UC82VTLvyIVf5VHHYGyOSXtA"
@@ -749,7 +749,7 @@
 															class="youtube">
 															<img src="http://grapestheme.com/notify/img/social/light/youtube.png"
 																alt="" width="40" border="0"
-																style="height:auto; width:100%; max-width:40px; margin-left:2px; margin-right:2px">
+																style="height:auto; width:100%; max-width:40px; margin-left:2px; margin-right:2px" />
 														</a>
 
 													</td>
