--- a/mailTemplate.html
+++ b/mailTemplate.html
@@ -283,7 +283,7 @@
 													<td align="center" valign="top" style="padding-bottom: 20px;"
 														class="imgHero">
 														<!-- Hero Image // -->
-														<img src="http://grapestheme.com/notify/img/hero-img/red/heroFill/user-welcome.png"
+														<img src="./user-welcome.png"
 															width="600" border="0"
 															style="width: 100%; max-width: 600px; height: auto; display: block;"
 															alt="" />
@@ -739,7 +739,7 @@
 														<a href="https://www.facebook.com/groups/416996222205529/"
 															target="_blank" style="display: inline-block;"
 															class="facebook">
-															<img src="http://grapestheme.com/notify/img/social/light/facebook.png"
+															<img src="./facebook.png"
 																alt="" width="40" border="0"
 																style="height:auto; width:100%; max-width:40px; margin-left:2px; margin-right:2px" />
 														</a>
@@ -747,7 +747,7 @@
 														<a href="https://www.youtube.com/channel/UC82VTLvyIVf5VHHYGyOSXtA"
 															target="_blank" style="display: inline-block;"
 															class="youtube">
-															<img src="http://grapestheme.com/notify/img/social/light/youtube.png"
+															<img src="./youtube.png"
 																alt="" width="40" border="0"
 																style="height:auto; width:100%; max-width:40px; margin-left:2px; margin-right:2px" />
 														</a>
